# iccDEV-ConversionTestData

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ConvertBulk.cpp  ConvertSingle.cpp  Dockerfile  Dockerfile.ci-regression  Dockerfile.nixos  Doxyfile  Doxyfile.full  README.md  vcpkg.json
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  actionlint.yaml  codeql-config.yml  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_bug_report.md
.github/ci/: ubsan-ignorelist.txt
.github/codeql-queries/: README.md  argv-unchecked-index.ql  describe-without-validate.ql  division-by-zero-profile.ql  factory-bare-new.ql  fixedpoint-type-confusion.ql  float-to-int-cast.ql  iccdev-jsonlib-suite.qls  iccdev-security-suite.qls  ignored-save-profile-result.ql  json-raw-normalized-value.ql  json-recursive-parse.ql  json-size-overflow.ql  json-unchecked-type-access.ql  localized-text-unsafe-serialization.ql  multiplication-overflow-alloc.ql  new-array-delete-mismatch.ql  null-after-read.ql  qlpack.yml  recursive-parse-no-depth-limit.ql  rule-of-three-violation.ql  signed-char-byte-conversion.ql  signed-offset-overflow.ql  snprintf-size-mismatch.ql  tainted-format-string.ql  tell-subtraction-underflow.ql  u8fixed8-reconstruction-error.ql  unbounded-profile-loop.ql  unchecked-allocation.ql  unchecked-file-io.ql  unsafe-header-cast.ql  unsafe-tag-downcast.ql  unterminated-ucs2-settext.ql  world-writable-output.ql
.github/instructions/: build-system.instructions.md  icc-library-code.instructions.md  icc-specification.instructions.md  sanitizer-scripts.instructions.md  testing.instructions.md  vcpkg-port.instructions.md  workflow-governance.instructions.md
.github/prompts/: SECURITY_ISSUE_FORMAT.md  add-new-tool.prompt.md  add-regression-workflow.prompt.md  audit-workflow-governance.prompt.md  bisect-regression.prompt.md  build-and-test.prompt.md  code-review-hunting.prompt.md  contributor-onboarding.prompt.md  cross-platform-ci.prompt.md  debug-wasm-build.prompt.md  file-security-issue.prompt.md  maintainer-ci-ctest.prompt.md  maintainer-label-triage.prompt.md  pre-pr-security-cycle.prompt.md  reduce-doc-noise.prompt.md  reproduce-security-issue.prompt.md  vcpkg-port-debug.prompt.md  version-bump.prompt.md
.github/scripts/: audit-workflow-permissions.py  check-workflow-cache-policy.sh  ci-binary-inventory.sh  ci-restore-release-artifact-metadata.sh  ci-safe-apt-update.sh  codeql-report.sh  iccdev-basic-string-regression-tests.sh  iccdev-calculator-regression-tests.sh  iccdev-cam-degenerate-regression-tests.sh  iccdev-cam-impact-surround-regression.sh  iccdev-compiler-warning-summary.py  iccdev-dump-profile-header-regression-tests.sh  iccdev-hybrid-applyprofiles-timing.sh  iccdev-hybrid-pipeline-tests.sh  iccdev-iccapplyprofiles-lab-roundtrip-tests.sh  iccdev-iccapplyprofiles-threading-regression-tests.sh  iccdev-iccconnect-search-cost-regression-tests.sh  iccdev-issue-1079-fromjson-soft-failure.sh  iccdev-issue-1097-applyprofiles-hbo.sh  iccdev-issue-1121-json-envvars-regression.sh  iccdev-issue-1148-writer-device-regression.sh  iccdev-issue-1150-output-failure-regression.sh  iccdev-issue-1151-pngdump-icc-injection.sh  iccdev-issue-1166-cam-hyperbolicinv-regression.sh  iccdev-issue-1167-jpegdump-byte-regression.sh  iccdev-issue-1168-pawg-calculator-hbo.sh  iccdev-issue-1178-fromcube-devnull-regression.sh  iccdev-issue-1179-fromcube-regression.sh  iccdev-issue-1230-json-threads-regression.sh  iccdev-issue-1336-applytolink-pcc-regression.sh  iccdev-issue-1337-checkpcsconnections-regression.sh  iccdev-issue-1342-1343-imageparse-signed-unsigned-regression.sh  iccdev-issue-1346-imageparse-atoi-unsigned-regression.sh  iccdev-json-cfg-tests.sh  iccdev-json-parser-regression-tests.sh  iccdev-lut16-zero-curve-regression-tests.sh  iccdev-mluc-iso-code-regression-tests.sh  iccdev-mluc-read-utf16-regression-tests.sh  iccdev-mluc-setter-regression-tests.sh  iccdev-namedcolor-apply-regression-tests.sh  (+19 more)
.github/skills/: README.md
.github/tests/: lint_check.sh  test-all-signatures.sh  test-extended-signatures.ps1  test-extended-signatures.sh  test-xss-extended.sh  test-xss-signatures.sh  test_powershell_sanitizer.ps1  test_sanitization.ps1  test_sanitization.sh
.github/workflows/: ScanBuild.yml  ci-cfl065-ab-test.yml  ci-clang-tidy-coreguidelines.yml  ci-code-coverage.yml  ci-codeql-security.yml  ci-comprehensive-build-test.yml  ci-cwe681-signcompare.yml  (+27 more)
IccConversionTestDataGenerator/: IccConversionTestDataGenerator.csproj  IccConversionTestDataGenerator.sln  Program.cs
IccProfLib/: CMakeLists.txt  IccApplyBPC.cpp  IccArrayBasic.cpp  IccArrayBasic.h  IccArrayFactory.cpp  IccArrayFactory.h  IccCAM.cpp  IccCmm.cpp  IccCmm.h  IccCmmSearch.cpp  IccCmmSearch.h  IccCmmThread.cpp  IccCmmThread.h  IccConvertUTF.cpp  IccEncoding.cpp  IccEval.cpp  IccEval.h  IccIO.cpp  IccIO.h  IccJsonTypes.h  IccMD5.cpp  IccMatrixMath.cpp  IccMpeACS.cpp  IccMpeACS.h  IccMpeBasic.cpp  IccMpeBasic.h  IccMpeCalc.cpp  IccMpeCalc.h  IccMpeFactory.cpp  IccMpeFactory.h  IccMpeSpectral.cpp  IccMpeSpectral.h  IccObject.cpp  IccObject.h  IccPcc.cpp  IccPcc.h  IccPrmg.cpp  IccProfLibConf.h  IccProfLibVer.h  IccProfLibVer.h.in  (+29 more)
Testing/: CreateAllProfiles.bat  CreateAllProfiles.sh  Readme.md  RunJsonTests.sh  RunTests.bat  RunTests.sh  sRGB_v4_ICC_preference.json  silence.txt
Utils/: CMakeLists.txt  Config.cpp  Config.h  Util.cpp  Util.h
docs/: bisect.md  build.md  ci-shared-exports-log-audit-2026-04-30.md  codeql.md  ctest.md  documentation-maintenance.md  icc-cmm-threading.md  icc-connect-config.schema.json  icc-connect.md  icc-profile.schema.json  iccjson-tag-types.md  iccjson.md  index.md  install.md  label-system.md  linear-stack-workflow.md  pre-pr-security-cycle.md  regression-workflow-governance.md  tools-cli-reference.md  vcpkg.md  workflow-security-trust-boundaries.md
examples/hello-iccdev/: CMakeLists.txt  README.md  hello-iccdev.cpp  vcpkg-configuration.json  vcpkg.json
(+213 files in other folders)
